unpackaged/main/default/objects/Lead/fields/System_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW__c</fullName>
    <label>System Size(kW)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>