unpackaged/main/default/objects/Lead/fields/target_id__c.field-meta.xml
<CustomField>
    <fullName>target_id__c</fullName>
    <label>target_id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>