unpackaged/main/default/objects/Lead/fields/Thermostat_Required__c.field-meta.xml
<CustomField>
    <fullName>Thermostat_Required__c</fullName>
    <label>Thermostat Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>