unpackaged/main/default/objects/Lead/fields/Time_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Time_Submitted__c</fullName>
    <label>Time Submitted</label>
    <length>40</length>
    <type>Text</type>
</CustomField>