unpackaged/main/default/objects/Lead/fields/TMP_combo_note__c.field-meta.xml
<CustomField>
    <fullName>TMP_combo_note__c</fullName>
    <label>TMP_combo_note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>