unpackaged/main/default/objects/Lead/fields/TYPE__c.field-meta.xml
<CustomField>
    <fullName>TYPE__c</fullName>
    <label>TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACQUISITION</fullName>
            </value>
            <value>
                <fullName>DISPOSITION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>