unpackaged/main/default/objects/Lead/fields/Undeliverable_Email__c.field-meta.xml
<CustomField>
    <fullName>Undeliverable_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undeliverable Email</label>
    <type>Checkbox</type>
</CustomField>