unpackaged/main/default/objects/Lead/fields/Utility_Company__c.field-meta.xml
<CustomField>
    <fullName>Utility_Company__c</fullName>
    <label>Utility Company</label>
    <length>40</length>
    <type>Text</type>
</CustomField>