unpackaged/main/default/objects/Lead/fields/Utility_Provider__c.field-meta.xml
<CustomField>
    <fullName>Utility_Provider__c</fullName>
    <label>Utility Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A &amp; N Electric Coop</fullName>
            </value>
            <value>
                <fullName>Abbeville City of</fullName>
            </value>
            <value>
                <fullName>Aiken Electric Coop Inc</fullName>
            </value>
            <value>
                <fullName>Alger-Delta Coop Electric Assn</fullName>
            </value>
            <value>
                <fullName>Alpena Power Co</fullName>
            </value>
            <value>
                <fullName>Bamberg Board of Public Works</fullName>
            </value>
            <value>
                <fullName>Bath Electric Gas &amp; Water Sys</fullName>
            </value>
            <value>
                <fullName>Belmont Light</fullName>
            </value>
            <value>
                <fullName>Berkeley Electric Co-op</fullName>
            </value>
            <value>
                <fullName>Berkeley Electric Coop Inc</fullName>
            </value>
            <value>
                <fullName>Black River Electric Co-op</fullName>
            </value>
            <value>
                <fullName>Blue Ridge Electric Coop Inc</fullName>
            </value>
            <value>
                <fullName>Braintree Electric Light Department</fullName>
            </value>
            <value>
                <fullName>Broad River Electric Coop, Inc</fullName>
            </value>
            <value>
                <fullName>Central Electric Power Co-op</fullName>
            </value>
            <value>
                <fullName>Chicopee City of</fullName>
            </value>
            <value>
                <fullName>City of Camden</fullName>
            </value>
            <value>
                <fullName>City of Georgetown</fullName>
            </value>
            <value>
                <fullName>City of Gladstone</fullName>
            </value>
            <value>
                <fullName>City of Marquette</fullName>
            </value>
            <value>
                <fullName>City of Newberry</fullName>
            </value>
            <value>
                <fullName>City of Rock Hill</fullName>
            </value>
            <value>
                <fullName>City of Russell</fullName>
            </value>
            <value>
                <fullName>City of Union</fullName>
            </value>
            <value>
                <fullName>City of Westminster</fullName>
            </value>
            <value>
                <fullName>Cleco Power LLC</fullName>
            </value>
            <value>
                <fullName>Clinton Combined Utility Sys</fullName>
            </value>
            <value>
                <fullName>Clinton Village of</fullName>
            </value>
            <value>
                <fullName>Coastal Electric Coop, Inc</fullName>
            </value>
            <value>
                <fullName>Concord Municipal Light Plant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>