unpackaged/main/default/objects/Lead/fields/utm_keyword__c.field-meta.xml
<CustomField>
    <fullName>utm_keyword__c</fullName>
    <label>utm_keyword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>