unpackaged/main/default/objects/Lead/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <label>utm_source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>