unpackaged/main/default/objects/Lead/fields/variant__c.field-meta.xml
<CustomField>
    <fullName>variant__c</fullName>
    <label>variant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>