unpackaged/main/default/objects/Lead/fields/X12_Months_Electricity_Usage_Total__c.field-meta.xml
<CustomField>
    <fullName>X12_Months_Electricity_Usage_Total__c</fullName>
    <label>12 Months Electricity Usage (Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>