unpackaged/main/default/objects/Lead/fields/x3rd_Party_Amount__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party_Amount__c</fullName>
    <label>3rd Party Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>