unpackaged/main/default/objects/Lead/fields/X3rd_Party_Partner__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Partner__c</fullName>
    <label>3rd Party Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>360 Total Solutions LLC</fullName>
            </value>
            <value>
                <fullName>Ace Solar and Roofing</fullName>
            </value>
            <value>
                <fullName>Alectrona Solar LLC</fullName>
            </value>
            <value>
                <fullName>Alpha Solar</fullName>
            </value>
            <value>
                <fullName>Authentic Solar Power, LLC</fullName>
            </value>
            <value>
                <fullName>Barry Enterprises</fullName>
            </value>
            <value>
                <fullName>Brightest Solar</fullName>
            </value>
            <value>
                <fullName>Bullseye Marketing Group Inc.</fullName>
            </value>
            <value>
                <fullName>C &amp; D Marketing Services LLC</fullName>
            </value>
            <value>
                <fullName>Carolina Semper Solar LLC</fullName>
            </value>
            <value>
                <fullName>Citrus Solar LLC</fullName>
            </value>
            <value>
                <fullName>Diesel TEK, Inc</fullName>
            </value>
            <value>
                <fullName>Dvinci Energy</fullName>
            </value>
            <value>
                <fullName>Enlight Energy</fullName>
            </value>
            <value>
                <fullName>FiveStrata</fullName>
            </value>
            <value>
                <fullName>Florida Solar Energy Group</fullName>
            </value>
            <value>
                <fullName>Fuze Power, Inc.</fullName>
            </value>
            <value>
                <fullName>Gansett Solar</fullName>
            </value>
            <value>
                <fullName>G Sterling Capital, LLC</fullName>
            </value>
            <value>
                <fullName>Harbor Energy</fullName>
            </value>
            <value>
                <fullName>Independent Alchemists Master Account</fullName>
            </value>
            <value>
                <fullName>Inti Solar</fullName>
            </value>
            <value>
                <fullName>Ion Solar</fullName>
            </value>
            <value>
                <fullName>Jersey Business Group</fullName>
            </value>
            <value>
                <fullName>Laird Hometown Solar, LLC</fullName>
            </value>
            <value>
                <fullName>Mitt Marketing LLC</fullName>
            </value>
            <value>
                <fullName>MLL Holdings LLC</fullName>
            </value>
            <value>
                <fullName>New Choice Solar</fullName>
            </value>
            <value>
                <fullName>New Jersey Sun Tech</fullName>
            </value>
            <value>
                <fullName>NexxGen Technologies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>