unpackaged/main/default/objects/Lead/fields/X3rd_Party_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Sales_Rep__c</fullName>
    <label>3rd Party Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aaron Cota</fullName>
            </value>
            <value>
                <fullName>Aaron Kennedy</fullName>
            </value>
            <value>
                <fullName>Aaron Williams</fullName>
            </value>
            <value>
                <fullName>Adam Mackey</fullName>
            </value>
            <value>
                <fullName>Adam Stuetz</fullName>
            </value>
            <value>
                <fullName>Adam Urankar</fullName>
            </value>
            <value>
                <fullName>Ahmad Hodroj</fullName>
            </value>
            <value>
                <fullName>Alex Ellis</fullName>
            </value>
            <value>
                <fullName>Alex Lappin</fullName>
            </value>
            <value>
                <fullName>Alex Pederson</fullName>
            </value>
            <value>
                <fullName>Anders Jacobson</fullName>
            </value>
            <value>
                <fullName>Andre Godla</fullName>
            </value>
            <value>
                <fullName>Andrew Catapano</fullName>
            </value>
            <value>
                <fullName>Andrew Climovech</fullName>
            </value>
            <value>
                <fullName>Andrew Grose</fullName>
            </value>
            <value>
                <fullName>Andrew Jensen</fullName>
            </value>
            <value>
                <fullName>Andrew Pacentine</fullName>
            </value>
            <value>
                <fullName>Andy Climovech</fullName>
            </value>
            <value>
                <fullName>Angela Chen</fullName>
            </value>
            <value>
                <fullName>Angela Harrington</fullName>
            </value>
            <value>
                <fullName>Arthur Parker</fullName>
            </value>
            <value>
                <fullName>Ashlee Milazzo</fullName>
            </value>
            <value>
                <fullName>Atley Hammond</fullName>
            </value>
            <value>
                <fullName>Austin Tashakori</fullName>
            </value>
            <value>
                <fullName>Avery Dominick</fullName>
            </value>
            <value>
                <fullName>Avil Gilbert</fullName>
            </value>
            <value>
                <fullName>Benji Jordan</fullName>
            </value>
            <value>
                <fullName>Ben Lestarge</fullName>
            </value>
            <value>
                <fullName>Benn Ciardi</fullName>
            </value>
            <value>
                <fullName>Ben Wright</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>