unpackaged/main/default/objects/Lead/fields/Years_of_Solar_Install_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Solar_Install_Experience__c</fullName>
    <label>Years of Solar Install Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-3</fullName>
            </value>
            <value>
                <fullName>4-10</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>