unpackaged/main/default/objects/Lead/recordTypes/Alchemist_BD_Referral.recordType-meta.xml
<RecordType>
    <fullName>Alchemist_BD_Referral</fullName>
    <active>true</active>
    <businessProcess>Inside%2FOutside Sales</businessProcess>
    <label>Alchemist BD Referral</label>
</RecordType>