unpackaged/main/default/objects/Lead/recordTypes/Ambassador.recordType-meta.xml
<RecordType>
    <fullName>Ambassador</fullName>
    <active>true</active>
    <businessProcess>Ambassador Acquisition</businessProcess>
    <label>Ambassador</label>
</RecordType>