unpackaged/main/default/objects/Lead/recordTypes/Build_Only.recordType-meta.xml
<RecordType>
    <fullName>Build_Only</fullName>
    <active>true</active>
    <businessProcess>Inside%2FOutside Sales</businessProcess>
    <label>Build Only</label>
</RecordType>