unpackaged/main/default/objects/Lead/recordTypes/Energy_Dashboard.recordType-meta.xml
<RecordType>
    <fullName>Energy_Dashboard</fullName>
    <active>true</active>
    <businessProcess>Inside%2FOutside Sales</businessProcess>
    <description>Leads created by the Energy Dashboard</description>
    <label>Energy Dashboard</label>
</RecordType>