unpackaged/main/default/objects/Lead/recordTypes/Energy_Monitor.recordType-meta.xml
<RecordType>
    <fullName>Energy_Monitor</fullName>
    <active>true</active>
    <businessProcess>Inside%2FOutside Sales</businessProcess>
    <label>Energy Monitor</label>
</RecordType>