unpackaged/main/default/objects/Lead/recordTypes/Inside_Outside_Sales.recordType-meta.xml
<RecordType>
    <fullName>Inside_Outside_Sales</fullName>
    <active>true</active>
    <businessProcess>Inside%2FOutside Sales</businessProcess>
    <description>Use this type of Lead for B2C selling to consumers.</description>
    <label>Inside/Outside Sales</label>
</RecordType>