unpackaged/main/default/objects/Lead/recordTypes/Inside_Sales.recordType-meta.xml
<RecordType>
    <fullName>Inside_Sales</fullName>
    <active>true</active>
    <businessProcess>Inside Sales</businessProcess>
    <label>Inside Sales</label>
</RecordType>