unpackaged/main/default/objects/Lead/recordTypes/O_M_Sales.recordType-meta.xml
<RecordType>
    <fullName>O_M_Sales</fullName>
    <active>true</active>
    <businessProcess>Inside%2FOutside Sales</businessProcess>
    <label>O&amp;M Sales</label>
</RecordType>