unpackaged/main/default/objects/Lead/recordTypes/Palmetto_Protect.recordType-meta.xml
<RecordType>
    <fullName>Palmetto_Protect</fullName>
    <active>true</active>
    <businessProcess>Palmetto Protect</businessProcess>
    <label>Palmetto Protect</label>
</RecordType>