unpackaged/main/default/objects/Lead/recordTypes/Sales_Member.recordType-meta.xml
<RecordType>
    <fullName>Sales_Member</fullName>
    <active>true</active>
    <businessProcess>Sales Member</businessProcess>
    <label>Sales Member</label>
</RecordType>