unpackaged/main/default/objects/Lead/recordTypes/Set_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Set_Appointment</fullName>
    <active>true</active>
    <businessProcess>Set Appointment</businessProcess>
    <description>Use this for new leads where no appointment has been set.</description>
    <label>Set Appointment</label>
</RecordType>