unpackaged/main/default/objects/Lead/recordTypes/Storage.recordType-meta.xml
<RecordType>
    <fullName>Storage</fullName>
    <active>true</active>
    <businessProcess>Inside%2FOutside Sales</businessProcess>
    <label>Storage</label>
</RecordType>