unpackaged/main/default/objects/Lead/recordTypes/X3rd_Party_Design_Sales.recordType-meta.xml
<RecordType>
    <fullName>X3rd_Party_Design_Sales</fullName>
    <active>true</active>
    <businessProcess>Inside%2FOutside Sales</businessProcess>
    <description>3rd Party - Design Sales</description>
    <label>3rd Party - Design Sales</label>
</RecordType>