unpackaged/main/default/objects/Lead/validationRules/Campaign_Name_Required_for_Event_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Name_Required_for_Event_Lead</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( LeadSource , "Event") &amp;&amp;
ISBLANK(Campaign.Name)</errorConditionFormula>
    <errorDisplayField>CampaignId</errorDisplayField>
    <errorMessage>Please select the corresponding event campaign.</errorMessage>
</ValidationRule>