unpackaged/main/default/objects/Lead/validationRules/Contract_LEAD_Conversion_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_LEAD_Conversion_Partner</fullName>
    <active>true</active>
    <description>Validates that required fields needed for Converting the Lead are present.</description>
    <errorConditionFormula>RecordTypeId = "0121a000000eQYP" 
&amp;&amp; 
IsConverted
&amp;&amp;
ISBLANK(TEXT( X3rd_Party_Partner__c ))</errorConditionFormula>
    <errorDisplayField>Sub_Market__c</errorDisplayField>
    <errorMessage>You must complete the 3rd Party Partner field in order to convert this Lead.</errorMessage>
</ValidationRule>