unpackaged/main/default/objects/Lead/validationRules/Contract_LEAD_ConversionRule_SubMarket.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_LEAD_ConversionRule_SubMarket</fullName>
    <active>true</active>
    <description>Validates that required fields needed for Converting the Lead are present.</description>
    <errorConditionFormula>RecordTypeId = "0121a000000eQYP" /*Contracted Sales */
&amp;&amp; 
IsConverted
&amp;&amp;
ISBLANK(TEXT(Sub_Market__c))</errorConditionFormula>
    <errorDisplayField>Sub_Market__c</errorDisplayField>
    <errorMessage>You must complete the Sub Market in order to convert this Lead.</errorMessage>
</ValidationRule>