unpackaged/main/default/objects/Lead/validationRules/ContractedLEAD_ConversionRule_Leadsource.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractedLEAD_ConversionRule_Leadsource</fullName>
    <active>true</active>
    <description>Validates that required fields needed for Converting the Lead are present.</description>
    <errorConditionFormula>RecordTypeId = "0121a000000eQYP" /* Inside/Outside Sales */
&amp;&amp; 
IsConverted
&amp;&amp;
ISBLANK(TEXT(LeadSource))</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>You must complete the Lead Source before converting this Lead</errorMessage>
</ValidationRule>