unpackaged/main/default/objects/Lead/validationRules/Lead_CleanUp_Selected_Admins.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_CleanUp_Selected_Admins</fullName>
    <active>true</active>
    <description>Only Salesforce Administrator can select Lead Clean-up as Reason Not Interested.</description>
    <errorConditionFormula>AND($UserRole.Name &lt;&gt; "CEO", 
ISPICKVAL(  Reason_Not_Interested__c  , "Lead Clean-up"))</errorConditionFormula>
    <errorDisplayField>Reason_Not_Interested__c</errorDisplayField>
    <errorMessage>Only Salesforce Administrator can select Lead Clean-up as Reason Not Interested.</errorMessage>
</ValidationRule>