unpackaged/main/default/objects/Lead/validationRules/LEAD_ConversionRule_Address_Design_Sales.validationRule-meta.xml
<ValidationRule>
    <fullName>LEAD_ConversionRule_Address_Design_Sales</fullName>
    <active>true</active>
    <description>Validates that required fields needed for Converting the Lead are present.</description>
    <errorConditionFormula>RecordTypeId = "0121a000000eQaz" /* 3rd Party Design Sales */
&amp;&amp; 
IsConverted
&amp;&amp;
ISBLANK(Street)
&amp;&amp;
ISBLANK(City)
&amp;&amp;
ISBLANK(State)
&amp;&amp;
ISBLANK(PostalCode)</errorConditionFormula>
    <errorMessage>You must complete the Address in order to convert this Lead.</errorMessage>
</ValidationRule>