unpackaged/main/default/objects/Lead/validationRules/LEAD_ConversionRule_Appointment.validationRule-meta.xml
<ValidationRule>
    <fullName>LEAD_ConversionRule_Appointment</fullName>
    <active>true</active>
    <description>Validates that required fields needed for Converting the Lead are present. (Inside/Outside Sales)</description>
    <errorConditionFormula>(RecordTypeId = "0121a00000028v5" &amp;&amp; IsConverted &amp;&amp; ISBLANK( Appointment_Date__c ) &amp;&amp;ISBLANK( Appointment_Time__c ))</errorConditionFormula>
    <errorDisplayField>Appointment_Date__c</errorDisplayField>
    <errorMessage>You must enter an Appointment Date and Appointment Time to convert this Lead</errorMessage>
</ValidationRule>