unpackaged/main/default/objects/Lead/validationRules/LEAD_ConversionRule_Email_or_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>LEAD_ConversionRule_Email_or_Phone</fullName>
    <active>true</active>
    <description>Validates that required fields needed for Converting the Lead are present.</description>
    <errorConditionFormula>RecordTypeId = "0121a00000028v5" /* Inside/Outside Sales */
&amp;&amp; 
IsConverted
&amp;&amp;
ISBLANK(Email) &amp;&amp; ISBLANK(Phone)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>You must complete either an Email or Phone to convert this Lead.</errorMessage>
</ValidationRule>