unpackaged/main/default/objects/Lead/validationRules/LEAD_CreateRule_Email_or_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>LEAD_CreateRule_Email_or_Phone</fullName>
    <active>false</active>
    <description>Email or Phone is needed to create a Lead.</description>
    <errorConditionFormula>RecordTypeId = "0121a00000028v5" /* Inside/Outside Sales */
&amp;&amp; 
ISNEW() 
&amp;&amp;
ISBLANK(Email) &amp;&amp; ISBLANK(Phone)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>You must complete either an Email or Phone to create a Lead.</errorMessage>
</ValidationRule>