unpackaged/main/default/objects/Lead/validationRules/Not_Interested_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Interested_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status, "Connected Not Interested") &amp;&amp;
ISPICKVAL( Reason_Not_Interested__c , "Other") &amp;&amp;
ISBLANK(Other_Reason__c)</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>Please enter Other reason for Not Interested, or choose from one of the preset choices.</errorMessage>
</ValidationRule>