unpackaged/main/default/objects/Lead/validationRules/State_Cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>State_Blank_check__c = 1
&amp;&amp;
IsConverted</errorConditionFormula>
    <errorDisplayField>State</errorDisplayField>
    <errorMessage>Please select a State</errorMessage>
</ValidationRule>