unpackaged/main/default/objects/Lead/listViews/Aftermarket_Leads.listView-meta.xml
<ListView>
    <fullName>Aftermarket_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Stage__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Aftermarket Leads</label>
</ListView>