unpackaged/main/default/objects/Lead/listViews/Alchemist_Leads.listView-meta.xml
<ListView>
    <fullName>Alchemist_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Biz_Dev_Customer_Type__c</field>
        <operation>equals</operation>
        <value>Partner - Alchemist</value>
    </filters>
    <label>Alchemist Leads</label>
    <sharedTo>
        <role>Business_Development</role>
    </sharedTo>
</ListView>