unpackaged/main/default/objects/Lead/listViews/Alchemist_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Alchemist_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Alchemist Leads</label>
    <queue>Alchemist_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>