unpackaged/main/default/objects/Lead/listViews/All_soft_Leads.listView-meta.xml
<ListView>
    <fullName>All_soft_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Appointment_Date__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Test_Account__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>pi__campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Connected Not Interested</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Do Not Ever Contact Again</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <filters>
        <field>Customer_Type__c</field>
        <operation>equals</operation>
        <value>Residential - Customer</value>
    </filters>
    <label>All Soft Leads</label>
</ListView>